fixed z-index on nav bar

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ header{
     justify-content: space-between;
     align-items: center;
     position: fixed;
+    z-index: 100;
 }
 #logo{
     width: 100px;
